--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
             <!--------------------------------TABS---------------------------------->
             <div class="mobo" id="ccc">
-                <li><a href="#main" id="mobileview0"><img src="images/home-7-64.png" alt="home">&emsp;&emsp;</a><a href="#main" onclick='myFunction1();' id="mobileview1" title="Home"> Home</a></li>
-                <li><a href="#connect"><img src="images/contacts-2-64.png" alt="connect">&emsp;&emsp;</a><a href="#connect" onclick='myFunction2();' id="mobileview2" title="Connect">Connect</a></li> 
-                <li><a href="#details"><img src="images/view-details-64.png" alt="details">&emsp;&emsp;</a><a href="#details" onclick='myFunction3();' id="mobileview3" title="Details">Details</a></li>
-                <li><a href="#form"><img src="images/info-3-64.png" alt="register">&emsp;&emsp;</a><a href="#form" onclick='myFunction4();'id="mobileview4" title="Register">Register</a>
+                <li><a href="#main" id="mobileview0" onclick='myFunction1();'><img src="images/home-7-64.png" alt="home">&emsp;&emsp;</a><a href="#main" onclick='myFunction1();' id="mobileview1" title="Home"> Home</a></li>
+                <li><a href="#connect" onclick='myFunction2();'><img src="images/contacts-2-64.png" alt="connect">&emsp;&emsp;</a><a href="#connect" onclick='myFunction2();' id="mobileview2" title="Connect">Connect</a></li> 
+                <li><a href="#details" onclick='myFunction3();'><img src="images/view-details-64.png" alt="details">&emsp;&emsp;</a><a href="#details" onclick='myFunction3();' id="mobileview3" title="Details">Details</a></li>
+                <li><a href="#form" onclick='myFunction4();'><img src="images/info-3-64.png" alt="register">&emsp;&emsp;</a><a href="#form" onclick='myFunction4();'id="mobileview4" title="Register">Register</a>
             </div>
 
             <!--------------------------------------------DARK MODE---------------------------------->
